<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:context="local.ak.bcaguide.Registrationf">



    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="40sp"
        android:id="@+id/profileimage"
        android:layout_centerHorizontal="true"
        android:src="@drawable/user"
        android:contentDescription="@string/todo" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/one"
        android:layout_width="380sp"
        android:layout_height="100sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="160sp"
        app:neumorph_shapeType="pressed">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="50sp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:layout_width="380sp"
        android:layout_height="100sp"
        app:neumorph_shapeType="pressed"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20sp"
        android:layout_below="@+id/one"
        android:id="@+id/two"
        >
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="10sp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:paddingStart="50sp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:background="@null"
            android:id="@+id/newuser"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:layout_width="380sp"
        android:layout_height="100sp"
        android:layout_below="@+id/two"
        android:layout_centerHorizontal="true"
        app:neumorph_shapeType="pressed"
        android:layout_marginStart="20sp"
        android:id="@+id/three"
    >

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="10sp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:paddingStart="50sp"
            android:hint="@string/pass"
            android:textColor="@color/black"

            android:background="@null"
            android:id="@+id/newpass"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:layout_width="380sp"
        android:layout_height="100sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/three"
        app:neumorph_shapeType="pressed"
        android:layout_marginStart="20sp"
        android:id="@+id/four"

        >
        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="10sp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:paddingStart="50sp"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:background="@null"
            android:id="@+id/newphone"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

    </soup.neumorphism.NeumorphCardView>






    <soup.neumorphism.NeumorphButton
        android:id="@+id/register"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_below="@+id/four"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_toEndOf="@+id/resetfield"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="#061575"
        android:textSize="24sp"
        android:textStyle="bold" />





    <soup.neumorphism.NeumorphButton
        android:id="@+id/resetfield"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_below="@+id/four"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/reset"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>